--- a/dev.ipynb
+++ b/dev.ipynb
@@ -43,14 +43,14 @@
       "INFO:werkzeug:\u001b[33mPress CTRL+C to quit\u001b[0m\n",
       "DEBUG:lpy.server:/register Received:[{'name': None, 'content': 'import os\\nimport django\\nfrom django.core.management import...\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/jingtao/projects/literate-python/lpy/server.py\", line 117, in _register\n",
+      "  File \"/Users/jingtao/projects/literate-org/lpy/server.py\", line 117, in _register\n",
       "    register_literate_module_finder(data)\n",
       "TypeError: register_literate_module_finder() takes 0 positional arguments but 1 was given\n",
       "DEBUG:lpy.server:/register Returning:{'type': 'error', 'stderr': 'register_literate_module_finder() takes 0 positional arguments but 1 was given'}\n",
       "INFO:werkzeug:127.0.0.1 - - [02/Sep/2024 21:09:43] \"POST /register HTTP/1.1\" 200 -\n",
       "DEBUG:lpy.server:/register Received:[{'name': None, 'content': 'import os\\nimport django\\nfrom django.core.management import...\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/jingtao/projects/literate-python/lpy/server.py\", line 117, in _register\n",
+      "  File \"/Users/jingtao/projects/literate-org/lpy/server.py\", line 117, in _register\n",
       "    register_literate_module_finder(data)\n",
       "TypeError: register_literate_module_finder() takes 0 positional arguments but 1 was given\n",
       "DEBUG:lpy.server:/register Returning:{'type': 'error', 'stderr': 'register_literate_module_finder() takes 0 positional arguments but 1 was given'}\n",
@@ -436,9 +436,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "literate-python",
+   "display_name": "literate-org",
    "language": "python",
-   "name": "literate-python"
+   "name": "literate-org"
   },
   "language_info": {
    "codemirror_mode": {
