--- a/literate-org.org
+++ b/literate-org.org
@@ -86,29 +86,29 @@ So comes this library to help me import Python modules from org files in Emacs.
 :END:
 ** definition
 #+BEGIN_SRC elisp
-(define-minor-mode literate-python-mode
+(define-minor-mode literate-org-mode
     "Mode for org buffers with code blocks."
   :lighter nil
   (cond
-    (literate-python-mode
+    (literate-org-mode
      (when (equal "org" (f-ext (buffer-file-name (current-buffer))))
        (when (buffer-base-buffer)
          (with-current-buffer (buffer-base-buffer)
            ;; The command `save-buffer` utilizes the base buffer for an indirect buffer.
-           (add-hook 'before-save-hook 'literate-python-black-org-code-block -50 t)
-           (add-hook 'after-save-hook 'literate-python-tangle-current-file -50 t)
-           (add-hook 'xref-backend-functions #'literate-python-xref-backend -50 t)))))
+           (add-hook 'before-save-hook 'literate-org-black-org-code-block -50 t)
+           (add-hook 'after-save-hook 'literate-org-tangle-current-file -50 t)
+           (add-hook 'xref-backend-functions #'literate-org-xref-backend -50 t)))))
     (t
      (when (equal "org" (f-ext (buffer-file-name (current-buffer))))
        (when (buffer-base-buffer)
          (with-current-buffer (buffer-base-buffer)
-           (remove-hook 'before-save-hook 'literate-python-black-org-code-block t)
-           (remove-hook 'after-save-hook 'literate-python-tangle-current-file t)))
-       (remove-hook 'xref-backend-functions #'literate-python-xref-backend t)))))
+           (remove-hook 'before-save-hook 'literate-org-black-org-code-block t)
+           (remove-hook 'after-save-hook 'literate-org-tangle-current-file t)))
+       (remove-hook 'xref-backend-functions #'literate-org-xref-backend t)))))
 #+END_SRC
 ** black org code block when save
 #+BEGIN_SRC elisp
-(defun literate-python-black-org-code-block ()
+(defun literate-org-black-org-code-block ()
   (when (org-in-block-p '("src")) 
     (let ((language (getf (second (org-element-at-point)) :language)))
       (when (find language '("python" "ipython") :test #'equalp)
@@ -116,18 +116,18 @@ So comes this library to help me import Python modules from org files in Emacs.
 #+END_SRC
 ** black all org code blocks in current buffer
 #+BEGIN_SRC elisp
-(defun literate-python-black-org-code-blocks-in-current-buffer ()
+(defun literate-org-black-org-code-blocks-in-current-buffer ()
   (interactive)
   (save-excursion
     (goto-char (point-min))
     (while (re-search-forward "#\\+BEGIN_SRC python" nil t)
       (forward-line 1)
       (unless (string-prefix-p "#+END_SRC" (buffer-substring-no-properties (line-beginning-position) (line-end-position)))
-        (literate-python-black-org-code-block)))))
+        (literate-org-black-org-code-block)))))
 #+END_SRC
 ** tangle current file when save
 #+BEGIN_SRC elisp
-(defun literate-python-tangle-current-file ()
+(defun literate-org-tangle-current-file ()
   (interactive)
   (when-let ((file-name (cdr (assoc :tangle (cl-third (org-babel-get-src-block-info 'light))))))
    (org-babel-tangle '(16) file-name (f-ext file-name))))
@@ -135,18 +135,18 @@ So comes this library to help me import Python modules from org files in Emacs.
 ** xref backend
 *** backend name
 #+BEGIN_SRC elisp
-(defun literate-python-xref-backend ()
-  'xref-literate-python)
+(defun literate-org-xref-backend ()
+  'xref-literate-org)
 #+END_SRC
 *** identifier-completion-table
 #+BEGIN_SRC elisp
-(cl-defmethod xref-backend-identifier-completion-table ((_backend (eql xref-literate-python)))
+(cl-defmethod xref-backend-identifier-completion-table ((_backend (eql xref-literate-org)))
   (xref-backend-identifier-completion-table 'xref-lsp))
 #+END_SRC
 *** collect definitions in an org file
 **** a variable to store all definitions
 #+BEGIN_SRC elisp
-(defvar literate-python-org-code-definitions nil)
+(defvar literate-org-org-code-definitions nil)
 #+END_SRC
 **** parse all python code blocks
 #+BEGIN_SRC elisp
@@ -165,7 +165,7 @@ So comes this library to help me import Python modules from org files in Emacs.
 
 *** find definitions
 #+BEGIN_SRC elisp
-(cl-defmethod xref-backend-definitions ((_backend (eql xref-literate-python)) identifier)
+(cl-defmethod xref-backend-definitions ((_backend (eql xref-literate-org)) identifier)
   (let ((current-point (point)))
     (save-excursion
       ;; `save-buffer' will tangle code blocks for current file.
@@ -176,7 +176,7 @@ So comes this library to help me import Python modules from org files in Emacs.
 #+END_SRC
 *** utilities
 #+BEGIN_SRC elisp
-(defun literate-python-get-point-in-tangled-file ()
+(defun literate-org-get-point-in-tangled-file ()
   (let ((current-point (point)))
     (save-excursion
       ;; `save-buffer' will tangle code blocks for current file.
@@ -643,24 +643,24 @@ def run_server():
 ** Utilities
 *** connect to a literate server
 #+BEGIN_SRC elisp
-(defun literate-python-connect ()
+(defun literate-org-connect ()
   (interactive)
-  (when-let* ((url (read-from-minibuffer "URL: " literate-python-rest-server)))
-    (setf literate-python-rest-server url)
-    (literate-python-request "status" :type "GET")
-    (message "Connected to %s" literate-python-rest-server)))
+  (when-let* ((url (read-from-minibuffer "URL: " literate-org-rest-server)))
+    (setf literate-org-rest-server url)
+    (literate-org-request "status" :type "GET")
+    (message "Connected to %s" literate-org-rest-server)))
 #+END_SRC
 
 *** send request to remote literate server
 #+BEGIN_SRC elisp
-(defvar literate-python-last-response nil)
-(cl-defun literate-python-request (path &key params data (type "GET"))
-  (setf literate-python-last-response nil)
-  (awhen (get-buffer "*literate-python-error*")
+(defvar literate-org-last-response nil)
+(cl-defun literate-org-request (path &key params data (type "GET"))
+  (setf literate-org-last-response nil)
+  (awhen (get-buffer "*literate-org-error*")
     ;; Close the buffer as it will be out of date.
     (kill-buffer it))
   (let* ((request-backend 'url-retrieve)
-         (server literate-python-rest-server)
+         (server literate-org-rest-server)
          resp)
     (request (concat server "lpy/" path)
         :params params
@@ -671,7 +671,7 @@ def run_server():
         :data (encode-coding-string (json-encode data) 'utf-8 t) ; Encode and ensure unibyte
         :complete (cl-function
                    (lambda (&key response &allow-other-keys)
-                     (setf literate-python-last-response response)
+                     (setf literate-org-last-response response)
                      (case (request-response-status-code response)
                        (200 (setf resp (request-response-data response)))
 
@@ -681,7 +681,7 @@ def run_server():
       (cond ((equal type "error")
              (let ((stdout (cdr (assoc 'stdout resp)))
                    (stderr (cdr (assoc 'stderr resp))))
-               (with-current-buffer (get-buffer-create "*literate-python-error*")
+               (with-current-buffer (get-buffer-create "*literate-org-error*")
                  (erase-buffer)
                  (insert "=== Data ===\n" (encode-coding-string (json-encode data) 'utf-8 t) "\n\n")
                  (insert "==== Error ===\n" (or (cdr (assoc 'error resp)) ""))
@@ -689,7 +689,7 @@ def run_server():
                    (insert "\n\n=== stdout ===\n" stdout))
                  (when stderr
                    (insert "\n\n=== stderr ===\n" (cdr (assoc 'stderr resp)))))
-               (switch-to-buffer-other-window "*literate-python-error*")))))
+               (switch-to-buffer-other-window "*literate-org-error*")))))
     resp))
 #+END_SRC
 
@@ -697,13 +697,13 @@ def run_server():
 ** Register literate modules
 *** register literate modules
 #+BEGIN_SRC elisp
-(defun literate-python-remote-register-modules (modules)
-  (literate-python-request "register" :type "POST"
+(defun literate-org-remote-register-modules (modules)
+  (literate-org-request "register" :type "POST"
                            :data modules))
 #+END_SRC
 *** register modules for code blocks under current point
 #+BEGIN_SRC elisp
-(defun literate-python-register-modules ()
+(defun literate-org-register-modules ()
   (interactive)
   (let* ((element (org-element-at-point))
          (info (second element))
@@ -724,22 +724,22 @@ def run_server():
                                  `((name . ,key)
                                    ("content" . ,(mapconcat 'identity (reverse (gethash key modules)) "\n"))))))
       ;; TODO: add empty "__init__" module if not exists for a package.
-      (literate-python-remote-register-modules modules-list)
+      (literate-org-remote-register-modules modules-list)
       (message "Registered %s modules." (hash-table-count modules)))))
 #+END_SRC
 
 ** Source Code Execution
 *** customized variables for server host and port
 #+BEGIN_SRC elisp
-(defcustom literate-python-rest-server "http://localhost:7330/"
+(defcustom literate-org-rest-server "http://localhost:7330/"
   "The server address for literate python server."
   :type 'string
-  :group 'literate-python)
+  :group 'literate-org)
 
 #+END_SRC
 *** execute source codes in specified module for org-babel-python-evaluate
 #+BEGIN_SRC elisp
-(defun literate-python-setup-org-babel ()
+(defun literate-org-setup-org-babel ()
   (setf org-babel-python--exec-tmpfile
         "\
 with open('%s') as __org_babel_python_tmpfile:
@@ -747,8 +747,8 @@ with open('%s') as __org_babel_python_tmpfile:
 #+END_SRC
 *** execute source code in remote server
 #+BEGIN_SRC elisp
-(cl-defun literate-python-remote-execute-code (code &key (type :exec) (module) (module-create-method "import_or_create"))
-  (literate-python-request "execute" :type "POST"
+(cl-defun literate-org-remote-execute-code (code &key (type :exec) (module) (module-create-method "import_or_create"))
+  (literate-org-request "execute" :type "POST"
                            :data `((type . ,(subseq (symbol-name type) 1))
                                    (module . ,module)
                                    (module-create-method . ,module-create-method)
@@ -758,7 +758,7 @@ with open('%s') as __org_babel_python_tmpfile:
 We have to switch back to org buffer, otherwise =org-babel-execute-src-block-maybe= will report a message and
 override our own compilation report.
 #+BEGIN_SRC elisp
-(defun literate-python-execute-current-code-block ()
+(defun literate-org-execute-current-code-block ()
   (interactive)
   (let* ((context-info (second (org-element-context)))
          (block-arguments (third (org-babel-get-src-block-info)))
@@ -770,8 +770,8 @@ override our own compilation report.
          (module-create-method (or (org-entry-get (point) "LITERATE_PYTHON_MODULE_CREATE_METHOD" t)
                                    "import_or_create"))
          (module-name (org-entry-get (point) "LITERATE_PYTHON_MODULE" t))
-         (resp (literate-python-remote-execute-code code :type type :module module-name :module-create-method module-create-method)))
-    (with-current-buffer (get-buffer-create "*literate-python-stdout*")
+         (resp (literate-org-remote-execute-code code :type type :module module-name :module-create-method module-create-method)))
+    (with-current-buffer (get-buffer-create "*literate-org-stdout*")
       (awhen (cdr (assoc 'stdout resp))
         (goto-char (point-max))
         (insert "\n" it "\n")))
@@ -784,7 +784,7 @@ override our own compilation report.
 #+END_SRC
 *** get top level python code
 #+BEGIN_SRC elisp
-(defun literate-python-get-top-level-node-at-point ()
+(defun literate-org-get-top-level-node-at-point ()
   "Get the current top level node at point, return a cons of start and end position."
   (let* ((node (treesit-node-at (point)))
          (parent (treesit-node-parent node)))
@@ -795,7 +795,7 @@ override our own compilation report.
 #+END_SRC
 *** get the module name for a file name
 #+BEGIN_SRC elisp
-(cl-defun literate-python-module-name-from-file-name (&optional (file (buffer-file-name)))
+(cl-defun literate-org-module-name-from-file-name (&optional (file (buffer-file-name)))
   "Get the module name from a file name."
   (let* ((package-root (lsp-workspace-root))
          (relative-name (f-no-ext (f-relative file package-root))))
@@ -805,9 +805,9 @@ override our own compilation report.
 #+END_SRC
 *** load python code to current module
 #+BEGIN_SRC elisp
-(defun literate-python-load-code-in-current-namespace ()
+(defun literate-org-load-code-in-current-namespace ()
   (interactive)
-  (let* ((node (literate-python-get-top-level-node-at-point))
+  (let* ((node (literate-org-get-top-level-node-at-point))
          (begin (treesit-node-start node))
          (end (treesit-node-end node))
          (code (buffer-substring-no-properties begin end))
@@ -815,10 +815,10 @@ override our own compilation report.
          (org-babel-p (equalp "org" (f-ext file)))
          (module-name (if org-babel-p
                         (org-entry-get (point) "LITERATE_PYTHON_MODULE" t)
-                        (literate-python-module-name-from-file-name file)))
+                        (literate-org-module-name-from-file-name file)))
          (module-create-method (or (org-entry-get (point) "LITERATE_PYTHON_MODULE_CREATE_METHOD" t)
                                    "import_or_create")))
-    ;; To Fix module name with syntax `...literate-python.literate_python.module_a'
+    ;; To Fix module name with syntax `...literate-org.literate_python.module_a'
     (let ((prefix-dot-count 0))
       (while (eq ?. (aref module-name prefix-dot-count))
         (incf prefix-dot-count))
@@ -829,7 +829,7 @@ override our own compilation report.
         (when (> index 0)
           (setf module-name (substring module-name index)))))
 
-    (literate-python-remote-execute-code code :type :exec :module module-name :module-create-method module-create-method)
+    (literate-org-remote-execute-code code :type :exec :module module-name :module-create-method module-create-method)
     (message "Loaded %s[%s:%s] in module %s" (treesit-node-type node) begin end module-name)))
 #+END_SRC
 ** register python modules 
@@ -1060,14 +1060,14 @@ For example, in the following Python code block, we can parse the Python code an
 **** Utilities
 ***** how to prepare a new org section for a Python module
 #+BEGIN_SRC elisp
-(cl-defun literate-python-new-org-section-for-a-module (module-name new-level &key (title module-name))
+(cl-defun literate-org-new-org-section-for-a-module (module-name new-level &key (title module-name))
   (loop repeat new-level do (insert "*"))
   (insert " " title "\n")
   (org-entry-put (point) "LITERATE_PYTHON_MODULE" module-name))
 #+END_SRC
 ***** the parse tree for current file
 #+BEGIN_SRC elisp
-(defun literate-python-parse-tree-for-current-file ()
+(defun literate-org-parse-tree-for-current-file ()
   (let ((language (tree-sitter-require 'python))
         (parser (tsc-make-parser)))
     (tsc-set-language parser language)
@@ -1077,7 +1077,7 @@ For example, in the following Python code block, we can parse the Python code an
 ***** get the comment for a module
 The comment for a module is usually the first string in the Python file before any meaning code.
 #+BEGIN_SRC elisp
-(defun literate-python-module-comment-from-node (node)
+(defun literate-org-module-comment-from-node (node)
   (when (eq 'module (tsc-node-type node)) 
     (let* ((index 0)
                 (child (tsc-get-nth-child node index)))
@@ -1095,24 +1095,24 @@ The comment for a module is usually the first string in the Python file before a
 **** How to get the name of a parse node
 ***** generic function
 #+BEGIN_SRC elisp
-(cl-defgeneric literate-python-node-name (node-type node)
+(cl-defgeneric literate-org-node-name (node-type node)
   (:documentation "Get the name of a node."))
 #+END_SRC
 ***** function definition
 #+BEGIN_SRC elisp
-(cl-defmethod literate-python-node-name ((node-type (eql function_definition)) node)
+(cl-defmethod literate-org-node-name ((node-type (eql function_definition)) node)
   (format "Function %s" (tsc-node-text (tsc-get-child-by-field node :name))))
 #+END_SRC
 
 ***** class_definition
 #+BEGIN_SRC elisp
-(cl-defmethod literate-python-node-name ((node-type (eql class_definition)) node)
+(cl-defmethod literate-org-node-name ((node-type (eql class_definition)) node)
   (format "Class %s" (tsc-node-text (tsc-get-child-by-field node :name))))
 #+END_SRC
 
 ***** decorated_definition
 #+BEGIN_SRC elisp
-(cl-defmethod literate-python-node-name ((node-type (eql decorated_definition)) node)
+(cl-defmethod literate-org-node-name ((node-type (eql decorated_definition)) node)
   (let* ((name-list nil)
          (index 0)
          (child (tsc-get-nth-child node index)))
@@ -1121,98 +1121,98 @@ The comment for a module is usually the first string in the Python file before a
       (incf index)
       (setf child (tsc-get-nth-child node index)))
     (format "@%s: %s" (mapconcat 'identity name-list " ")
-            (literate-python-node-name (tsc-node-type child) child))))
+            (literate-org-node-name (tsc-node-type child) child))))
 #+END_SRC
 ***** assignment
 #+BEGIN_SRC elisp
-(cl-defmethod literate-python-node-name ((node-type (eql assignment)) node)
+(cl-defmethod literate-org-node-name ((node-type (eql assignment)) node)
   (let ((code (dired-replace-in-string "\n" " " (tsc-node-text node))))
-    (if (<= (length code) literate-python-max-title-size)
+    (if (<= (length code) literate-org-max-title-size)
       (format "Assignment %s" code)
       (format "Assignment %s" (tsc-node-text (tsc-get-child-by-field node :left))))))
 #+END_SRC
 
 ***** augmented_assignment
 #+BEGIN_SRC elisp
-(cl-defmethod literate-python-node-name ((node-type (eql augmented_assignment)) node)
+(cl-defmethod literate-org-node-name ((node-type (eql augmented_assignment)) node)
   (let ((code (dired-replace-in-string "\n" " " (tsc-node-text node))))
-    (if (<= (length code) literate-python-max-title-size)
+    (if (<= (length code) literate-org-max-title-size)
       (format "Assignment %s" code)
       (format "Assignment %s" (tsc-node-text (tsc-get-child-by-field node :left))))))
 #+END_SRC
 ***** call
 #+BEGIN_SRC elisp
-(cl-defmethod literate-python-node-name ((node-type (eql call)) node)
+(cl-defmethod literate-org-node-name ((node-type (eql call)) node)
   (let ((call-code (dired-replace-in-string "\n" " " (tsc-node-text node))))
-    (if (<= (length call-code) literate-python-max-title-size)
+    (if (<= (length call-code) literate-org-max-title-size)
       (format "Call %s" call-code)
       (format "Call %s" (tsc-node-text (tsc-get-child-by-field node :function))))))
 #+END_SRC
 
 ***** try
 #+BEGIN_SRC elisp
-(cl-defmethod literate-python-node-name ((node-type (eql try_statement)) node)
+(cl-defmethod literate-org-node-name ((node-type (eql try_statement)) node)
   "Try statement")
 #+END_SRC
 
 ***** while
 #+BEGIN_SRC elisp
-(cl-defmethod literate-python-node-name ((node-type (eql while_statement)) node)
+(cl-defmethod literate-org-node-name ((node-type (eql while_statement)) node)
   "While statement")
 #+END_SRC
 
 ***** the default implementation
 #+BEGIN_SRC elisp
-(cl-defmethod literate-python-node-name (node-type node)
+(cl-defmethod literate-org-node-name (node-type node)
   (format "%s" node-type))
 #+END_SRC
 ***** string
 #+BEGIN_SRC elisp
-(cl-defmethod literate-python-node-name ((node-type (eql string)) node)
+(cl-defmethod literate-org-node-name ((node-type (eql string)) node)
   "String")
 #+END_SRC
 
 ***** comment
 #+BEGIN_SRC elisp
-(cl-defmethod literate-python-node-name ((node-type (eql comment)) node)
+(cl-defmethod literate-org-node-name ((node-type (eql comment)) node)
   "Comment")
 #+END_SRC
 
 ***** import
 #+BEGIN_SRC elisp
-(cl-defmethod literate-python-node-name ((node-type (eql import)) node)
+(cl-defmethod literate-org-node-name ((node-type (eql import)) node)
   "Import")
 #+END_SRC
 ***** import_from_statement
 #+BEGIN_SRC elisp
-(cl-defmethod literate-python-node-name ((node-type (eql import_from_statement)) node)
+(cl-defmethod literate-org-node-name ((node-type (eql import_from_statement)) node)
   "Import")
 #+END_SRC
 
 ***** expression
 #+BEGIN_SRC elisp
-(cl-defmethod literate-python-node-name ((node-type (eql expression_statement)) node)
+(cl-defmethod literate-org-node-name ((node-type (eql expression_statement)) node)
   (let ((new-node (tsc-get-nth-child node 0)))
-    (literate-python-node-name (ts-node-type new-node) new-node)))
+    (literate-org-node-name (ts-node-type new-node) new-node)))
 #+END_SRC
 
 **** ignored directories
 #+BEGIN_SRC elisp
-(defcustom literate-python-ignored-dirs '("__pycache__" ".git" ".vscode" ".idea")
+(defcustom literate-org-ignored-dirs '("__pycache__" ".git" ".vscode" ".idea")
   "The directories to be ignored when importing Python packages."
-  :group 'literate-python)
+  :group 'literate-org)
 #+END_SRC
 
 **** the maximum size of a title for an org section
 #+BEGIN_SRC elisp
-(defcustom literate-python-max-title-size 80
+(defcustom literate-org-max-title-size 80
   "The maximum size of a title for an org section."
-  :group 'literate-python)
+  :group 'literate-org)
 #+END_SRC
 
 **** iterate a directory to import Python files
 #+BEGIN_SRC elisp
-(cl-defun literate-python-import (&key (level (or (org-current-level) 0))
+(cl-defun literate-org-import (&key (level (or (org-current-level) 0))
                                                       module-name module-path)
   "Import Python codes from a directory to an org file."
   (interactive "")
@@ -1237,34 +1237,34 @@ The comment for a module is usually the first string in the Python file before a
         (dolist (file (directory-files module-path t "\.py$"))
           (let* ((relative-name (f-no-ext (f-relative file module-path)))
                  (new-module-name (format "%s.%s" module-name (dired-replace-in-string "/" "." relative-name))))
-            (literate-python-import-python-code-to-org file new-level new-module-name)))
+            (literate-org-import-python-code-to-org file new-level new-module-name)))
 
         (dolist (directory (f-directories module-path))
           (let* ((relative-name (f-no-ext (f-relative directory module-path)))
                  (new-module-name (format "%s.%s" module-name (dired-replace-in-string "/" "." relative-name))))
-            (unless (loop for ignored-name in literate-python-ignored-dirs
+            (unless (loop for ignored-name in literate-org-ignored-dirs
                           thereis (search ignored-name new-module-name))
-              (literate-python-new-org-section-for-a-module new-module-name new-level :title (or (f-ext relative-name) relative-name))
-              (literate-python-import :level new-level :module-name new-module-name :module-path directory)))))
-      (literate-python-import-python-code-to-org module-path level module-name :with-org-section nil))))
+              (literate-org-new-org-section-for-a-module new-module-name new-level :title (or (f-ext relative-name) relative-name))
+              (literate-org-import :level new-level :module-name new-module-name :module-path directory)))))
+      (literate-org-import-python-code-to-org module-path level module-name :with-org-section nil))))
 #+END_SRC
 **** get pieces of code blocks in a python file
 To investigate the parse tree, we can use Emacs command [[https://github.com/emacs-mirror/emacs/blob/master/admin/notes/tree-sitter/starter-guide#query-references][treesit-explore-mode]]
 #+BEGIN_SRC elisp
-(defun literate-python-get-code-blocks-in-file (file)
+(defun literate-org-get-code-blocks-in-file (file)
   (with-current-buffer (find-file-noselect file)
-    (let* ((tree (literate-python-parse-tree-for-current-file))
+    (let* ((tree (literate-org-parse-tree-for-current-file))
            (root (tsc-root-node tree))
            (count-of-children (tsc-count-children root))
            (module-comment (when (> count-of-children 0)
-                             (literate-python-module-comment-from-node root)))
+                             (literate-org-module-comment-from-node root)))
            (current-index 0)
            (next-index 0)
            (next-title nil)
            (code-blocks nil))
       (while (< current-index count-of-children)
         (cl-multiple-value-setq (next-index next-title)
-          (literate-python-next-code-block-index root current-index))
+          (literate-org-next-code-block-index root current-index))
         (setf code-blocks
                 (nconc code-blocks
                        (list (cons (dired-replace-in-string "\n" " " next-title)
@@ -1277,18 +1277,18 @@ To investigate the parse tree, we can use Emacs command [[https://github.com/ema
 
 **** import a python file
 #+BEGIN_SRC elisp
-(defcustom literate-python-org-babel-lang "python" "The org-babel language for literate python."
-  :group 'literate-python)
+(defcustom literate-org-org-babel-lang "python" "The org-babel language for literate python."
+  :group 'literate-org)
 
-(cl-defun literate-python-import-python-code-to-org (file level module-name &key (with-org-section t))
+(cl-defun literate-org-import-python-code-to-org (file level module-name &key (with-org-section t))
   (let* ((new-level (1+ level))
-           (code-blocks-info (literate-python-get-code-blocks-in-file file))
+           (code-blocks-info (literate-org-get-code-blocks-in-file file))
          (module-comment (car code-blocks-info))
          (module-title (when module-comment
                         (first (split-string module-comment "\n" t nil))))
          (code-blocks (cdr code-blocks-info)))
     (when with-org-section
-      (literate-python-new-org-section-for-a-module module-name level :title (or module-title (f-ext module-name) module-name))
+      (literate-org-new-org-section-for-a-module module-name level :title (or module-title (f-ext module-name) module-name))
       (let* ((module-root-path (org-entry-get (point) "LITERATE_PYTHON_ROOT_MODULE_PATH" t))
              (root-module (org-entry-get (point) "LITERATE_PYTHON_ROOT_MODULE" t))
              (module-file-name (dired-replace-in-string "\\." "/" (if root-module
@@ -1302,13 +1302,13 @@ To investigate the parse tree, we can use Emacs command [[https://github.com/ema
     (loop for (title . code) in code-blocks do
       (loop repeat new-level do (insert "*"))
       (insert " " title "\n")
-      (insert "#+BEGIN_SRC " literate-python-org-babel-lang "\n")
+      (insert "#+BEGIN_SRC " literate-org-org-babel-lang "\n")
       (insert code)
       (insert "\n#+END_SRC\n"))))
 #+END_SRC
 **** get the next code block index
 #+BEGIN_SRC elisp
-(cl-defun literate-python-next-code-block-index (root start-index)
+(cl-defun literate-org-next-code-block-index (root start-index)
   (let* ((max-index (1- (tsc-count-children root)))
          (current-index start-index)
          (current-node nil)
@@ -1329,7 +1329,7 @@ To investigate the parse tree, we can use Emacs command [[https://github.com/ema
         (push current-node-type collected-valid-node-types))
 
       (when (= current-index max-index)
-        (return-from literate-python-next-code-block-index (values max-index (literate-python-node-name current-node-type current-node))))
+        (return-from literate-org-next-code-block-index (values max-index (literate-org-node-name current-node-type current-node))))
       (setf next-index (1+ current-index)
             next-node (ts-get-nth-child root next-index)
             next-node-type (ts-node-type next-node))
@@ -1339,22 +1339,22 @@ To investigate the parse tree, we can use Emacs command [[https://github.com/ema
                   (not (find previous-node-type '(comment)) )
                   (find (first collected-valid-node-types) '(import_statement import_from_statement))
                   (not (find next-node-type '(import_statement import_from_statement comment))))
-           (return-from literate-python-next-code-block-index (values (1- current-index) (literate-python-node-name previous-node-type previous-node)))
+           (return-from literate-org-next-code-block-index (values (1- current-index) (literate-org-node-name previous-node-type previous-node)))
            (incf current-index)))
         ((import_statement import_from_statement)
          (cond ((find next-node-type '(import_statement import_from_statement comment))
                 (incf current-index))
                (t
-                (return-from literate-python-next-code-block-index (values current-index "Import statements")))))
+                (return-from literate-org-next-code-block-index (values current-index "Import statements")))))
         (decorated_definition
-         (return-from literate-python-next-code-block-index
-           (values current-index (literate-python-node-name current-node-type current-node))))
+         (return-from literate-org-next-code-block-index
+           (values current-index (literate-org-node-name current-node-type current-node))))
         (class_definition
-         (return-from literate-python-next-code-block-index
-           (values current-index (literate-python-node-name current-node-type current-node))))
+         (return-from literate-org-next-code-block-index
+           (values current-index (literate-org-node-name current-node-type current-node))))
         (function_definition
-         (return-from literate-python-next-code-block-index
-           (values current-index (literate-python-node-name current-node-type current-node))))
+         (return-from literate-org-next-code-block-index
+           (values current-index (literate-org-node-name current-node-type current-node))))
         (expression_statement
          (let* ((first-child-node (ts-get-nth-child current-node 0))
                 (first-child-node-type (ts-node-type first-child-node)))
@@ -1364,19 +1364,19 @@ To investigate the parse tree, we can use Emacs command [[https://github.com/ema
               (setf next-node (ts-get-nth-child root next-index))
               (setf next-node-type (ts-node-type next-node)))
              (string
-              (return-from literate-python-next-code-block-index (values current-index "Docstring")))
+              (return-from literate-org-next-code-block-index (values current-index "Docstring")))
              (assignment
               ;; if there is a docstring for this assignment, continue to next index
               (if (and (eq 'expression_statement next-node-type)
                        (eq 'string (ts-node-type (ts-get-nth-child next-node 0))))
                 (incf current-index)
-                (return-from literate-python-next-code-block-index
+                (return-from literate-org-next-code-block-index
                   (values current-index
-                          (literate-python-node-name first-child-node-type first-child-node)))))
+                          (literate-org-node-name first-child-node-type first-child-node)))))
              (t
-              (return-from literate-python-next-code-block-index
+              (return-from literate-org-next-code-block-index
                 (values current-index
-                        (literate-python-node-name first-child-node-type first-child-node)))))))
+                        (literate-org-node-name first-child-node-type first-child-node)))))))
         (t
          (incf current-index))))))
 #+END_SRC
@@ -1389,22 +1389,22 @@ To investigate the parse tree, we can use Emacs command [[https://github.com/ema
 ** setup current module in python REPL
 *** a special variable for current module name in python REPL
 #+BEGIN_SRC elisp
-(defvar literate-python-current-module nil
+(defvar literate-org-current-module nil
         "The current python module name to be used when execute a code.")
 #+END_SRC
 *** display namespace in the mode line in buffer for python REPL 
 #+BEGIN_SRC elisp
-(defun literate-python-current-namespace-in-repl ()
+(defun literate-org-current-namespace-in-repl ()
   `(
     "/"
-    ,(or literate-python-current-module "*")
+    ,(or literate-org-current-module "*")
     "/"))
 (add-to-list 'mode-line-misc-info
-             `(inferior-python-mode (" [" literate-python-current-namespace-in-repl "] ")))
+             `(inferior-python-mode (" [" literate-org-current-namespace-in-repl "] ")))
 #+END_SRC
 *** a comint input sender to exec code in a namespace.
 #+BEGIN_SRC elisp
-(defun literate-python-comint-input-sender (proc string)
+(defun literate-org-comint-input-sender (proc string)
   (with-current-buffer (process-buffer proc)
     (if (eq major-mode 'inferior-python-mode)
       (let ((new-string (format "__PYTHON_EL_eval(%s, %s)\n"
@@ -1417,8 +1417,8 @@ To investigate the parse tree, we can use Emacs command [[https://github.com/ema
 
 ** setup python shell eval setup code
 #+BEGIN_SRC elisp
-(defun literate-python-setup-shell-eval-setup-code ()
-  (setf comint-input-sender (function literate-python-comint-input-sender))
+(defun literate-org-setup-shell-eval-setup-code ()
+  (setf comint-input-sender (function literate-org-comint-input-sender))
   (setf python-shell-eval-setup-code
   "\
 def __PYTHON_EL_eval(source, filename, module=None):
