--- a/test.ipynb
+++ b/test.ipynb
@@ -330,9 +330,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "literate-python",
+   "display_name": "literate-org",
    "language": "python",
-   "name": "literate-python"
+   "name": "literate-org"
   },
   "language_info": {
    "codemirror_mode": {
