--- a/literate-org.org
+++ b/literate-org.org
@@ -106,13 +106,15 @@ So comes this library to help me import Python modules from org files in Emacs.
 #+END_SRC
 ** execute a function in a temp buffer for org code block
 #+BEGIN_SRC elisp
-(defun update-org-code-block (update-func language)
+(defun update-org-code-block (update-func language file-name)
   (save-mark-and-excursion
     (pcase (org-src--contents-area (org-element-at-point))
       (`(,beg ,end ,_)
         (let ((buf (current-buffer))
               (end (- end 1))
-              (temp-file (format "/tmp/%s.%s" (make-symbol "literate-org")
+              (temp-file (format "%s/%s.%s"
+                                 (f-dirname file-name)
+                                 (make-symbol "literate-org")
                                  (literate-org-file-extension language))))
           (with-current-buffer (find-file-noselect temp-file)
             (let ((temp-buf (current-buffer)))
@@ -125,24 +127,28 @@ So comes this library to help me import Python modules from org files in Emacs.
                 (save-restriction
                   (narrow-to-region beg end)
                   (replace-buffer-contents temp-buf 0.1))))
-            (let ((kill-buffer-hook nil)
-                  (kill-buffer-query-functions nil))
-              (kill-buffer (current-buffer))))
+            (set-buffer-modified-p nil)
+            (kill-buffer (current-buffer)))
           (delete-file temp-file))))))
 #+END_SRC
 
 ** format org code block when save
 #+BEGIN_SRC elisp
 (defun literate-org-format-code-block ()
+  (interactive)
   (when (org-in-block-p '("src")) 
-    (let ((language (getf (second (org-element-at-point)) :language)))
+    (let* ((language (getf (second (org-element-at-point)) :language))
+           (header-args (cl-third (org-babel-get-src-block-info 'light)))
+           (file-name (cdr (assoc :tangle header-args))))
       (cond ((find language '("python" "ipython") :test #'equalp)
              (python-black-org-mode-block t))
             ((find language '("tsx") :test #'equalp)
              (update-org-code-block
               #'(lambda (temp-buf)
-                  (prettier-js))
-              (intern language)))))))
+                  (let* ()
+                    (prettier-js)))
+              (intern language)
+              file-name))))))
 #+END_SRC
 ** format all org code blocks in current buffer
 #+BEGIN_SRC elisp
